Catch errors and fix